--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYdivE html>
 <html>
 
@@ -15,6 +16,9 @@
         <li>2) получить внутреннюю страницу методом GET в протоколе HTTP 1.1<br><img src="2.2.png"></li>
         <li>3)определить размер файла file.tar.gz, не скачивая его;<br><img src="2.3.png"></li>
         <li>4) определить медиатип ресурса /image.png<br><img src="2.4.png"></li>
+		<li>5) отправить комментарий на сервер по адресу /index.php <br><img src="2.5.png"></li>
+		<li>6)  получить первые 100 байт файла /file.tar.gz <br><img src="2.6.png"></li>
+		<li>7) определить кодировку ресурса /index.php <br><img src="2.7.png"></li>
 
     </ol>
 </body>
